# brand.alkem.dev

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.sh  justfile
.github/workflows/: deploy.yml
crates/flaskgen/: Cargo.toml
crates/flaskgen/demo/: Cargo.toml  dioxus.toml
crates/flaskgen/demo/src/: lib.rs  main.rs
crates/flaskgen/src/: lib.rs
infra/cloudflare/: README.md  main.tf  terraform.tfvars.example
scripts/: README.md  export-logo.py  generate-tokens.mjs  optimize-images.sh  stub-flask-index.html  tokens.mjs
site/: astro.config.mjs  package-lock.json  package.json
site/public/brand/stylesheets/: brand.css  brand.scss
site/scripts/: ensure-flask.js  export-flask-3d.mjs
site/src/components/: ColorSwatch.astro  FlaskLogo.astro  FontSpecimen.astro
site/src/layouts/: BaseLayout.astro
site/src/lib/flask-3d/: README.md  index.js  mesh.js  obj.js  profile.js
site/src/lib/vector-builder/: README.md  assembler.js  index.js  types.js
site/src/lib/vector-builder/generators/: flask.js  reference-flask.js
site/src/pages/: color.astro  downloads.astro  explorer.astro  identity.astro  index.astro  typography.astro  voice.astro
site/src/pages/experiments/: flask-3d.astro
site/src/styles/: global.css
src/logo/: README.md
src/palette/: README.md  tokens.json
src/typography/: FONT_CHOICES.md
